--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://morishita0619.github.io/blogdown_test/"
+baseurl = "https://morishita0619.github.io/"
 title = "Ghostwriter example"
 theme = "ghostwriter"
 copyright = "My Name"
@@ -8,7 +8,6 @@ relativeurls = true
 publishDir = "docs"
 hasCJKLanguage = true
 languageCode = "ja-jp"
-
 [Author]
     name = "My Name"
     profile = "https://google.com/+XXX"
